--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: 'Inter', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    width: 100%;
+    max-width: 1400px;
+    padding: 0 1em;
+    font-size: 1.2rem;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+header {
+    display: flex;
+    column-gap: 1em;
+}
+
+header a {
+    font-weight: 600;
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 22px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+a {
+    color: black;
+}
+
+.flex {
+    display: flex;
+    column-gap: 1em;
+}
+
+.date {
+    font-size: 0.9rem;
+}
+
+img {
+    padding: 2em;
+    height: 100%;
+    width: 85px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+}
+
+@media (min-width: 760px) {
+    body {
+        width: 87.5%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 12.5%;
+    }
 }
