--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ header a {
     text-decoration: none;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1em;
+}
+
 h1 {
     font-size: 3rem;
 }
@@ -47,9 +53,13 @@ a {
     font-size: 0.9rem;
 }
 
+.projects {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 img {
     padding: 2em;
-    height: 100%;
     width: 85px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 6px;
@@ -61,5 +71,10 @@ img {
         margin-left: auto;
         margin-right: auto;
         padding-left: 12.5%;
+    }
+
+    .projects {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
     }
 }
