--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    /* text-decoration: none; */
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: 'Inter', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -53,9 +61,21 @@ a {
     font-size: 0.9rem;
 }
 
+.intro {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+}
+
 .projects {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.post {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 img {
