--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     width: 100%;
     max-width: 1400px;
-    padding: 1em;
+    padding: 1em 1em 10em 1em;
     font-size: 1.2rem;
     background: #fffff8;
 }
