--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ body {
     width: 100%;
     max-width: 1400px;
     padding: 1em 1em 10em 1em;
-    font-size: 1.2rem;
     background: #fffff8;
 }
 
@@ -41,8 +40,7 @@ main {
 article {
     display: flex;
     flex-direction: column;
-    /* row-gap: 10px; */
-    row-gap: 1em;
+    row-gap: 10px;
 }
 
 article section {
@@ -53,7 +51,6 @@ article section {
 
 section {
     display: flex;
-    /* row-gap: 0.5em; */
     align-items: center;
     column-gap: 1em;
 }
@@ -63,54 +60,12 @@ pre {
     padding: 1em;
 }
 
-code {
-    color: #000;
-    background: none;
-    text-shadow: 0 1px #fff;
-    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
-    font-size: 1em;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-    -webkit-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
-}
-
 img {
     width: 100%;
 }
 
-h1 {
-    font-size: 2.25rem;
-}
-
-h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-style: italic;
-    margin-bottom: 1.4rem;
-}
-
 a {
     color: black;
-}
-
-a h2 {
-    margin-bottom: 0;
-}
-
-p,
-ol,
-ul {
-    font-size: 1.2rem;
-    line-height: 2rem;
 }
 
 ol,
@@ -123,14 +78,29 @@ menu {
     column-gap: 1em;
 }
 
-small {
-    font-size: 0.8rem;
-}
-
 header {
     display: flex;
     flex-direction: column;
     row-gap: 12px;
+}
+
+code {
+    color: #000;
+    background: none;
+    text-shadow: 0 1px #fff;
+    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
 }
 
 @media (min-width: 860px) {
