writing - added post on how i built magfinder

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ article section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    row-gap: 10px;
 }
 
 section {
@@ -107,5 +108,9 @@ code {
         width: 65%;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    img {
+        width: 85%;
     }
 }
